--- a/HTML/Recriando-a-Interface-do-Netflix/style/main.css
+++ b/HTML/Recriando-a-Interface-do-Netflix/style/main.css
@@ -107,6 +107,7 @@ header nav a:hover{
     width: 100%;
     display: block;
     cursor: pointer;
+    
 }
 
 
@@ -114,8 +115,9 @@ header nav a:hover{
     margin-top:5px;
 }
 
-
-
+.box-filme:hover{
+    border-style: solid;
+}
 
 
 
