--- a/HTML/Recriando-Jogo-Dinossauro-sem-Internet/style.css
+++ b/HTML/Recriando-Jogo-Dinossauro-sem-Internet/style.css
@@ -8,6 +8,7 @@ body {
   background-image: url(dino.png);
   width: 60px;
   height: 60px;
+  margin-left: 10px;
 }
 
 .cactus {
@@ -43,4 +44,15 @@ body {
   -webkit-animation: slideright 600s infinite linear;
   width: 100%;
   height: 200px;
+}
+
+.background{
+  animation-play-state: paused;
+}
+
+.Texto{
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  left: 50%;
 }
