--- a/HTML/Recriando-a-Interface-do-Netflix/style/main.css
+++ b/HTML/Recriando-a-Interface-do-Netflix/style/main.css
@@ -124,3 +124,28 @@ header nav a:hover{
 .box-filme:hover{
     border-style: solid;
 }
+/*modal para exibição de filme*/
+.modal-content {
+    position:absolute;
+    Background-color: #000000;
+    border: none;
+    width: 100%;
+    height: 150%;
+    z-index: 2;
+}
+
+.modal-content .btnClose{
+    float: right;
+    background-color: rgba(0, 0, 0, 0);
+    border:none;
+    color: darkgray;
+    margin-top: 30px;
+    margin-right: 60px;
+    font-size: 30px;
+    text-shadow: 0 1px 0 #fff;
+    cursor: pointer;  
+}
+
+.modal-content .btnClose:hover{
+    color: white;
+}
