--- a/HTML/Recriando-a-Interface-do-Netflix/style/main.css
+++ b/HTML/Recriando-a-Interface-do-Netflix/style/main.css
@@ -127,6 +127,8 @@ header nav a:hover{
 /*modal para exibição de filme*/
 .modal-content {
     position:absolute;
+    display: flex;
+    flex-direction: column;
     Background-color: #000000;
     border: none;
     width: 100%;
@@ -148,4 +150,16 @@ header nav a:hover{
 
 .modal-content .btnClose:hover{
     color: white;
+}
+
+.modal-content .modal-body{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 70%;
+}
+
+.modal-content .movie{
+    width: 100%;
+    height: 70%;
 }
