--- a/HTML/Recriando-Jogo-Dinossauro-sem-Internet/style.css
+++ b/HTML/Recriando-Jogo-Dinossauro-sem-Internet/style.css
@@ -52,7 +52,9 @@ body {
 
 .Texto{
   position: absolute;
-  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  left: 50%;
+  height: 100%;
 }
