--- a/HTML/Jogo-helicoptero/css/style.css
+++ b/HTML/Jogo-helicoptero/css/style.css
@@ -8,6 +8,34 @@ h1 {
     font-size: 40px;
     color: #603A03;
 }
+
 body{
     background-image: url(../imgs/fundo.jpg);
 } 
+
+#container{
+    width: 950px;
+    height: auto; /* auto indica que a div irá adequar o tamanho a quantidade de elementos*/
+    position: relative;
+    margin-left: auto; /*centraliza os elementos*/
+    margin-right: auto; /*centraliza os elementos*/
+}
+
+#fundoGame{
+    width: 950px;
+    height: 630px;
+    background-image: url(../imgs/fundo_game.jpg);
+    border-color: #FFF;
+    border-style: solid;
+}
+
+#inicio{
+    width: 350px;
+    height: 200px;
+    background-color: #FFF;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    text-align: center;
+    padding: 10px;
+}
