--- a/HTML/Jogo-helicoptero/css/style.css
+++ b/HTML/Jogo-helicoptero/css/style.css
@@ -75,3 +75,85 @@ body{
 	top: 447px;
 	background-image: url(../imgs/inimigo2.png);
 }
+
+/* Animações */
+.anima1 {
+	background-image:url(../imgs/helicoptero.png);
+	animation:play .5s steps(2) infinite; /* não funciona em todos os browsers*/
+
+    -webkit-animation: play .5s steps(2) infinite;   /* chrome*/
+    -moz-animation: play .5s steps(2) infinite;      /* mozila*/
+    -ms-animation: play .5s steps(2) infinite;       /* internet explorer*/
+    -o-animation: play .5s steps(2) infinite;        /* opera*/
+}
+
+.anima2 {
+    background-image:url(../imgs/inimigo1.png);
+    animation: play .5s steps(2) infinite;
+
+    -webkit-animation: play .5s steps(2) infinite;
+    -moz-animation: play .5s steps(2) infinite;
+    -ms-animation: play .5s steps(2) infinite;
+    -o-animation: play .5s steps(2) infinite; 
+}
+
+@keyframes play {
+	from {background-position:0px;}
+	to {background-position:-512px;}
+}
+
+@-webkit-keyframes play {
+    from { background-position:0px; }
+      to { background-position: -512px; }
+}
+ 
+@-moz-keyframes play {
+    from { background-position:0px; }
+      to { background-position: -512px; }
+}
+ 
+@-ms-keyframes play {
+    from { background-position:0px; }
+      to { background-position: -512px; }
+}
+ 
+@-o-keyframes play {
+    from { background-position:0px; }
+      to { background-position: -512px; }
+}
+
+.anima3 {
+	background-image:url(../imgs/amigo.png);
+    /*criado o keyframe play2 pois a animação é diferente*/
+	animation:play2 .9s steps(12) infinite;
+
+    -webkit-animation: play2 .9s steps(12) infinite;
+    -moz-animation: play2 .9s steps(12) infinite;
+    -ms-animation: play2 .9s steps(12) infinite;
+    -o-animation: play2 .9s steps(12) infinite;
+}
+
+@keyframes play2 {
+	from {background-position:0px;}
+	to {background-position:-528px;}
+}
+
+@-webkit-keyframes play2 {
+   from { background-position:    0px; }
+     to { background-position: -528px; }
+}
+
+@-moz-keyframes play2 {
+   from { background-position:    0px; }
+     to { background-position: -528px; }
+}
+
+@-ms-keyframes play2 {
+   from { background-position:    0px; }
+     to { background-position: -528px; }
+}
+
+@-o-keyframes play2 {
+   from { background-position:    0px; }
+     to { background-position: -528px; }
+}
