--- a/HTML/Jogo-helicoptero/css/style.css
+++ b/HTML/Jogo-helicoptero/css/style.css
@@ -83,6 +83,20 @@ body{
 	background-image: url(../imgs/disparo.png);
 }
 
+#explosao1 {
+	width:15px;
+	height:87px;
+	position:absolute;
+
+}
+
+#explosao2 {
+	width:15px;
+	height:87px;
+	position:absolute;
+	
+}
+
 /* Animações */
 .anima1 {
 	background-image:url(../imgs/helicoptero.png);
